--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,13 +5,13 @@ AllCops:
 Metrics/BlockLength:
   Enabled: true
   Exclude:
-    - spec/**/*
+    - specs/**/*
     - Rakefile
 
 Security/YAMLLoad:
   Enabled: true
   Exclude:
-    - spec/**/*
+    - specs/**/*
 
 Style/HashSyntax:
   Enabled: true
@@ -21,4 +21,5 @@ Style/HashSyntax:
 Style/SymbolArray:
   Enabled: true
   Exclude:
+    - db/migrations/**/*
     - Rakefile
