--- a/db/seeds/document_seeds.yml
+++ b/db/seeds/document_seeds.yml
@@ -1,9 +1,7 @@
 ---
-- project: 'NewProj'
-  name: 'secrets.yml'
+- filename: 'secrets.yml'
   description: 'AWS credentials'
   content: 'adslkdasflkhjkdfs'
-- project: 'NewProj'
-  name: 'another.yml'
+- filename: 'another.yml'
   description: 'configuration'
   content: "---\n-key: something\n  another: value"
