Requires digitally signed requests from authorized clients on critical routes
- lib/signed_requests.rb: library for verifying signed requests
- controllers/ : verify payload on critical routes
- Rakefile: generate signing keypairs on request

--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -1,15 +1,14 @@
 ---
 development:
-  DB_KEY: <replace with crypto key `rake generate:db_key`>
-  MSG_KEY: <replace with crypto key `rake generate:msg_key`>
+  DB_KEY:       <replace with crypto key `rake generate:db_key`>
+  MSG_KEY:      <replace with crypto key `rake generate:msg_key`>
   SENDGRID_KEY: <provision key from SendGrid>
+  SIGNING_KEY:  <replace with signing key from `rake generate:signing_keypair`>
+  VERIFY_KEY:   <replace with verify key from `rake generate:signing_keypair`>
 
 test:
-  DB_KEY: <replace with crypto key `rake generate:db_key`>
-  MSG_KEY: <replace with crypto key `rake generate:msg_key`>
+  DB_KEY:       <replace with crypto key `rake generate:db_key`>
+  MSG_KEY:      <replace with crypto key `rake generate:msg_key`>
   SENDGRID_KEY: <provision key from SendGrid>
-
-production:
-  DB_KEY: <replace with crypto key `rake generate:db_key`>
-  MSG_KEY: <replace with crypto key `rake generate:msg_key`>
-  SENDGRID_KEY: <provision key from SendGrid>
+  SIGNING_KEY:  <replace with signing key from `rake generate:signing_keypair`>
+  VERIFY_KEY:   <replace with verify key from `rake generate:signing_keypair`>
